deploy/net/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leadfy-ingress-new-site
  namespace: leadfy-pub
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - site-beta.leadfy.xyz
    secretName: site-beta-leadfy-cert-secret
  rules:
  - host: site-beta.leadfy.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: new-site
            port:
              number: 8080
